cargo-features = ["per-package-target"]

[package]
name = "test-kernel"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"

[workspace]
members = ["runner"]
resolver = "2"

[dependencies]
bootloader_api = { git = "https://github.com/rust-osdev/bootloader", branch = "next" }
uart_16550 = "0.2.10"
pic8259 = "0.10"
spin = "0.9"
x86_64 = "0.14"
pc-keyboard = "0.6"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]


[dependencies.noto-sans-mono-bitmap]
version = "0.1.2"
default-features = false
features = ["regular", "size_14"]
